Collapsing menu on mobile fixed

--- a/Sources/TEMPUS/UI/TEMPUS.WebSite/Content/Styles/Main.css
+++ b/Sources/TEMPUS/UI/TEMPUS.WebSite/Content/Styles/Main.css
@@ -11,7 +11,7 @@ body
     /* Margin bottom by footer height */
     margin-bottom: 60px;
 }
-/* Noscroll for collapsed navbar */
+
 @media (min-width: 768px) and (max-width: 1199px)
 {
     body
@@ -29,16 +29,6 @@ body
     /* Set the fixed height of the footer here */
     height: 60px;
     background-color: #f5f5f5;
-}
-
-/* Noscroll for collapsed navbar */
-@media (max-width: 768px)
-{
-    .navbar-collapse
-    {
-        max-height: none;
-        overflow-x: auto;
-    }
 }
 
 #footer > .container
